[tool.poetry]
name = "revseq"
version = "0.1.0"
description = "reverse and/or complement dna sequence"
authors = ["Miles Smith <mileschristiansmith@gmail.com>"]
license = "GPL-3"
homepage = "https://github.com/milescsmith/revseq"
repository = "https://github.com/milescsmith/revseq"

[tool.poetry.urls]
Changelog = "https://github.com/milescsmith/revseq/releases"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
icontract = "^2.6.2"
rich = "^12.5.1"
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
hypothesis = "^6.54.5"
nox = "^2022.8.7"
pytest = "^7.1.3"
isort = "^5.10.1"
mypy = "^0.971"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
revseq = "revseq.__main__:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["revseq"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true